<resources>
    <string name="app_name">Places</string>
    <string name="new_screen_title">Agregar un sitio</string>
    <string name="new_screen_description">En esta sección puede inscribir un sitio de la cuidad. Nombre el lugar y luego con el bóton del mapa, seleccione un punto en el mapa,</string>
    <string name="new_screen_subititle_1">Datos</string>
    <string name="new_screen_subititle_2">Imagenes</string>
    <string name="new_screen_marker_text">Dirección del sitio seleccionado</string>
    <string name="new_screen_buttom">Registrar</string>
    <string name="new__screen_hint">Nombre</string>
    <string name="new__screen_marker_image">Marker image</string>
    <string name="new__screen_add_image">Add image</string>
    <string name="menu_map">Map</string>
    <string name="menu_search">Lista</string>
    <string name="menu_new">Nuevo</string>
    <string name="card_map_text">Sostenga el toque para ubicar el lugar del sitio de interés</string>
    <string name="card_button_text">Continuar</string>
    <string name="allgrant">Todos los permisos concedidos</string>
    <string name="no_allgrant">Alerta!, no todos los permisos fueron concedidos</string>
    <string name="toast_fill_all">Por favor complete todos los campos para registrar.</string>
    <string name="rate_button">Calificar</string>
    <string name="distance">Cargando...</string>
    <string name="eye">Ojo</string>
    <string name="place">Lugar</string>
    <string name="star">Estrella</string>
    <string name="sucess_place_msg">El lugar fue registrado y guardado exitosamente</string>
    <string name="fill_all_msg">Por favor complete todos los campos para continuar</string>
    <string name="real_time_distance_msg">Cambia de posición actual para activar la distancia en tiempo real</string>
    <string name="geocoder_no_info">Sin información</string>
    <string name="marker_error">Error! No se pudo registrar estas coordenadas, verifica tu conexión.</string>
</resources>